# ChangeLog for dev-python/virtualenvwrapper
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/virtualenvwrapper/ChangeLog,v 1.16 2014/06/29 04:31:31 idella4 Exp $

  29 Jun 2014; Ian Delaney <idella4@gentoo.org> -virtualenvwrapper-3.7.1.ebuild,
  -virtualenvwrapper-4.0.ebuild, -virtualenvwrapper-4.1.1.ebuild,
  -virtualenvwrapper-4.2.ebuild:
  clean old vulnerable versions wrt Bug #509348

*virtualenvwrapper-4.3 (12 Jun 2014)

  12 Jun 2014; Patrick Lauer <patrick@gentoo.org> +virtualenvwrapper-4.3.ebuild:
  Bump, add py34

*virtualenvwrapper-4.2 (31 Mar 2014)

  31 Mar 2014; Patrick Lauer <patrick@gentoo.org> +virtualenvwrapper-4.2.ebuild:
  Bump

*virtualenvwrapper-4.1.1 (10 Aug 2013)

  10 Aug 2013; Patrick Lauer <patrick@gentoo.org>
  +virtualenvwrapper-4.1.1.ebuild:
  Bump

  06 May 2013; Dirkjan Ochtman <djc@gentoo.org> -virtualenvwrapper-3.0.1.ebuild,
  -virtualenvwrapper-3.0.ebuild, -virtualenvwrapper-3.2.ebuild,
  -virtualenvwrapper-3.6.1.ebuild, -virtualenvwrapper-3.6.ebuild,
  -virtualenvwrapper-3.7.ebuild:
  Remove old versions.

*virtualenvwrapper-4.0 (02 May 2013)

  02 May 2013; Patrick Lauer <patrick@gentoo.org> +virtualenvwrapper-4.0.ebuild:
  Bump

*virtualenvwrapper-3.7.1 (15 Apr 2013)

  15 Apr 2013; Patrick Lauer <patrick@gentoo.org>
  +virtualenvwrapper-3.7.1.ebuild:
  Bump

*virtualenvwrapper-3.7 (26 Mar 2013)

  26 Mar 2013; Patrick Lauer <patrick@gentoo.org> +virtualenvwrapper-3.7.ebuild:
  Bump

*virtualenvwrapper-3.6.1 (18 Mar 2013)

  18 Mar 2013; Patrick Lauer <patrick@gentoo.org>
  +virtualenvwrapper-3.6.1.ebuild:
  Bump

  30 Nov 2012; Ian Delaney <idella4@gentoo.org> virtualenvwrapper-3.6.ebuild:
  tests set to restrict consequent to persistently accessing the internet,
  downloading, fixes Bug #443868 by flameeyes

  05 Nov 2012; Patrick Lauer <patrick@gentoo.org> virtualenvwrapper-3.6.ebuild:
  Fixed dependencies #440806

*virtualenvwrapper-3.6 (01 Nov 2012)
