@@ -15,17 +15,19 @@ DIST wireshark-1.8.13.tar.bz2 24150627 SHA256 0d672e549fa0b30bbde6f68e8f80ccae88
 DIST wireshark-1.8.15.tar.bz2 24193769 SHA256 e71fab6909a67e6b1d5d21f93e731488fb0343e5206799105e5fdc34923d3e76 SHA512 38306d568017bf12f7db15507e209a74bdd600d4ae02fba63cc5f3639bcba5d07e5ef3dd50fcda3415d30647debdf3a63149a0ef8243898a789e14a8b456a667 WHIRLPOOL 121dc025ef198a6b60a710af370b97834c6b73feea8b314a320b94e47e14c199c76e247868b9be40852b26d8a9d726d3e0d5c85b671e3e71944f8f65f4916a9c
 EBUILD wireshark-1.10.7.ebuild 5817 SHA256 2992523100d08e70150cf5c524e5e8a5803eb39fdbad98966007fc5db4508dfb SHA512 65e91fba21e1cd487ccfc97081b0a2cfd15e205270e62b58626801284fd42cb20ad3b2c7e064951877fabb0c433679fef4ee032d3a8581bcf91b417933612bdd WHIRLPOOL 12b5fbc9fdf13fb1c807aef04850bb9913c6205bb26d239f7a2058c190eb93ed59c20dc375f5478d04ea3142fcc9dde335b5f82466781afaf753dc257f4d5880
 EBUILD wireshark-1.10.8-r1.ebuild 5537 SHA256 1ad6046a4db23c409920fb54d5a173dc74dff20fd933a135424b229f58c9d4e9 SHA512 a9f13530f15e3602e97dda3e1572ae2453e3597c1554ea7e25364080ae053ed31916c3fc606b175073e7ed606d1d228dce1fb252ce2e2096dad34cac8c883490 WHIRLPOOL 6d0fe39ea4df48a7944ce7c4feeb98c452049a6eeaf81ca1f8d6134b82e17c64db386f64e357b3b8292ef53f45d0bb57d11c7772e72d539ec8f6db867bd69b15
-EBUILD wireshark-1.10.8.ebuild 5822 SHA256 259a40435256013343d1da84552b72b0588dd55f42c4a696abda534ed07ba07c SHA512 648b144a21cdbca371ac6ce9098ceaa2bd72dd740e7b0252fb6fc1c0ebb7ebe3dfdcf3acae3cb991d4df1716181525cb04668ddccb42856f7ff80e9f63b69ed3 WHIRLPOOL 6a0d012cd8bbfae450271dee569974544fe754830200a6d2e8eca90407a412c1b3c60484ee742c967a377e2f4239ae980723411811f6720c80a27bdf23da2206
+EBUILD wireshark-1.10.8.ebuild 5820 SHA256 d97445a9696d788ef023d66bd28b8e658df4e667d6d2b929fa6ec74239fb6b02 SHA512 91180c2c8e156ba42fb923166c107395593a85ac1a05aceda65e99f16b96c6b09965e65ab9196beec83316bf44667e920b0b74fc2338fd9e51181c472d37f350 WHIRLPOOL 9cbf92e589d10a0a050ce9e58ff23e1791c22a7d4f71ed64a4362140246221e5be86b03735fb6415f9d40857311c933c52c8f8c9d706518109718d177c37a7c2
 EBUILD wireshark-1.12.0_rc2-r1.ebuild 5501 SHA256 19bb7926759dfd58b8b50b5331e98a14d7dade704489c5649c7ba7db68145cbb SHA512 50be82defdde66636ba3eedabbcf44ff3b3ee26bae82f62563a6768ba395c8558aa42162684c4a45f491e990ab091a2cb2de7c1f5b7fae4377f5bc3bb5df080c WHIRLPOOL affde0c024baa1b736880cb08bf8e754329da34d5fe101866e1d3a06d461346e8661290c83ac24a4eae461fd593ad33d4e5c2046f8b3e54294ced1b1a6f30cf3
 EBUILD wireshark-1.8.13.ebuild 5630 SHA256 63e31f4b1c0fd3e5c57fc025a834e8d70c6f9d846d161286eace0fa713a94b5d SHA512 2fde35910f12774058b1a2d79bf0a90ca8a1752616372242ae67c94bae71fc9708845f0dfbea90d6e3573075c72f125ec6790e5793ae9b365acf24b5c1b3d9f3 WHIRLPOOL afb5dc1d31aa94ce75f690c8ed8a6d3ca5597a4577b841f13fd5de597d7e6ef99caaa759e0ff0ee49f996d315c2a4a2f3276f7b14c43640e8ef0d3b66dad7e2c
 EBUILD wireshark-1.8.15-r1.ebuild 5703 SHA256 ad944f5fb763ffe993681d084212a5d928145cc6e3d0da5969219cfe118b3464 SHA512 3aa3d24b28607967101308ff46e296fefc075277a6145207fbcefec13ddc02fa975f9624cb949e77f104bf89a5b0bcce219e6fe609d13c9bb8569d3a0ba2238e WHIRLPOOL f9468c8f47ee306005099c5adabd4c172e2f3c4feadd60fcac583483ed9eb88709613d9ee265206a048fe9a949514fbda0ce588230a16af785cad468395f9805
-EBUILD wireshark-1.8.15.ebuild 5988 SHA256 a8c67ad6de42fe16e9110a0c0459ac75e8a2d671644b8dc021c0bf7e0fc216f8 SHA512 e422fa08e5893e9dabdff2076b7f6babe13c2a3c0f72b125052dc7eeae3d6650b08a17ee94b03330cd5d093cada5593e575a59ddfc64ecd73edf677fb41b2fc4 WHIRLPOOL 7ca86ea13fd453447896f10ad964d161aab00c8e571721849b035bf6822418369691596dc7027183e8fa58bb4cb7127c33af08f4b092d80207690cfb12ff6933
-MISC ChangeLog 92440 SHA256 a371dec70383298804244abd3ef029a28752b22c558994d38511c032a1413a3f SHA512 6ce538123174f4518f08b37fd3a20edc952f82c0213594b577a72dae2e8aef9d2792d9a5eee50870f3fcca22a37e65e8c44d9b17dcebea44318d804e16f87436 WHIRLPOOL 772e1b72de81d5b4d40eaade04a411f9f9df7d8d6984b3bf62d6a9f8a5497471299caee6f1c81f2a23636a0efdb4afd353a6b6d605a0d36e920d36c3eb198b49
+EBUILD wireshark-1.8.15.ebuild 5987 SHA256 b86e571fe7a611ab97c800f25ba3b58bf7f6392c6ab8baf9ed0172dff061f6cd SHA512 72c593831cfe802f13ce2c205386a746b3ad1dd8dd798a4ec7245b091b0fd9cc8be0e91979d53660da745b9a02b93340bb2e3a6a2d8d92d20bcd5c3e5fc77504 WHIRLPOOL 4379e55c55d1dc532759ada08cf6213ed52475dc9161cfa58c2707469d50705c8687cfa86eef71c37db6f38c64fa1e6520553754d6644be57bb7248835632c38
+MISC ChangeLog 92582 SHA256 90f31e1421827682f5615c4bab94b56d87900807d84b32b80e7e3724daaeae5c SHA512 57106d9903a45d70ccda7d44be4b3ada400f1c9c0d9e46df1f93b8303233817ca8b9eec2a8381887b4da821e1ac9c2dec1214087951f8e6867bb8ad954f1b434 WHIRLPOOL d79a0ea36623d2bb4f2f881763b84f0e64478195ae41ff7dc085dd9c2f323e65c68768afcd29f26c5fbaeb89e4fe921324819f4e4b33c085d3676792e903e8a5
 MISC metadata.xml 2662 SHA256 aa3e958ce2704697a912374dfd9df72310353b54883e63de57b1f4e925f804eb SHA512 2eaf02dbd17d346b42dd2ecbb10318c08f8cba0e6bf0cd0dd76f145cc37c1eb35788c4a60d90c42b92c8b7e554315a40046b3b94c5d1a004ebb88650eb296dda WHIRLPOOL 21d6545372ed8aae96efb37f295904a3b14a721e754daf3bab74284d2e7527944fa6c75dc34c3229dea0c815641574f46f72b4b173d0653c6a92bf06341b81a5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlOvN8IACgkQVWmRsqeSphPV9wCfQHMyrS8d67m5DRzvtqiJrot2
-uJoAnjTN/cbJL2JjwL3BX1Q27GU9FGoQ
-=yiem
+iJwEAQEIAAYFAlOv2WIACgkQG9wOWsQutdZ/UQQAxIC6AaTqK8Jueta3wz7SkbwW
+dG0urqCJmKT1IFQNOVFbG9cVwSj2s7wjUkBKrNk4Ae7O8aaY1y3UN4jS6CnJ4XLE
+NVmGt/A3Yyqav8V/tm7/PBm+9i3fEhWMAz8S79Vw04tYdq+YAt0vTg+VefAfd1Mq
+DaMDGEmNDnrj0uFI/bc=
+=mLot
 -----END PGP SIGNATURE-----
