@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/wireshark
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.631 2014/06/28 21:46:41 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.632 2014/06/29 09:10:56 zlogene Exp $
+
+  29 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> wireshark-1.10.8.ebuild,
+  wireshark-1.8.15.ebuild:
+  ppc/ppc64 stable wrt bug #513094
 
 *wireshark-1.12.0_rc2-r1 (28 Jun 2014)
 
